--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Name</title>
+    <title>BK Singh </title>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -71,7 +71,7 @@
 
         <div id="name-social-container">
             <div class="text-center">
-                <h1 id="my-name">My Name</h1>
+                <h1 id="my-name">BK Singh</h1>
             </div>
             <div>
                 <ul class="no-list-style horizontal-list text-center social-icons">
@@ -101,14 +101,10 @@
                         </a>
                     </li>
                 </ul>
-
             </div>
-
         </div>
-
     </header>
     <main>
-
         <section id="about">
             <div id="my-image">
                 <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000020_1549743985_macbook_mouse.jpg">
@@ -117,7 +113,7 @@
             <div id="about-para">
 
                 <p>
-                    Lorem Ipsum is simply dummy text of the printing and <span class="text-highlight">typesetting industry</span>. Lorem Ipsum has been the industry's standard <span class="text-highlight">dummy text ever</span> since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s <span class="text-highlight">with the release of Letraset</span> sheets containing Lorem Ipsum.
+                    I am a results-driven digital marketing professional with three years of experience in crafting effective strategies that drive online success. In the realm of programmatic advertising, I've spent a dedicated year perfecting the art of precision targeting and optimization. From elevating website traffic and SEO to managing successful PPC campaigns and boosting programmatic ROI, my hands-on experience and data-driven approach have consistently delivered outstanding results. I'm passionate about staying at the forefront of this ever-evolving industry and am always excited to connect with like-minded professionals and potential collaborators. Feel free to reach out at <span class="text-highlight">thebksingh735@gmail.com </span> to explore how we can achieve digital marketing success together.               
                 </p>
 
             </div>
